--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 }
 
 :root {
-    font-family:'Open Sans Condensed', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 body {
-    background-image: url('/TodoApp/images/todoApp.jpg');
+    background-image: url('/images/todoApp.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -20,7 +20,9 @@ body {
     justify-content: center;
     align-items: flex-start;
 }
-
+a {
+    color: black;
+}
 #container {
     background-color: rgba(255, 255, 255, 0.692);
     display: flex;
@@ -36,6 +38,7 @@ body {
     font-family: 'Quicksand', sans-serif;
     margin-bottom: 30px;
     font-size: 1.3rem;
+    text-transform: uppercase;
 }
 
 .input_container{
@@ -43,10 +46,11 @@ body {
 }
 #inputfield {
     height: 30px;
+    width: calc(40vw - 75px);
     background:transparent;
     border: none;
     border: 1px solid rgba(63, 162, 201, 0.781);
-    color: white;
+    color: black;
     flex-grow: 2;
 }
 #inputfield:focus {
@@ -68,17 +72,40 @@ body {
 }
 
 .task {
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
     background-color: white;
     height: 5vh;
     width: 40vw;
-    border: 1px solid black;
+    border: 1px solid rgb(63, 162, 201);
     margin: 2px;
-    padding: 10px;
+    padding: 10px 0px 0px 20px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
 
+.task:hover{
+    background-color: rgb(177, 177, 177);
 }
 
 .output_container{
     display: flex;
     flex-direction: column;
     margin: 20px 10px 0px 10px;
+}
+
+
+.fa-times {
+    position: absolute;
+    right: 2.5%;
+    top: 30%;
+    cursor: pointer;
+}
+
+
+.checked {
+    font-style: oblique;
+    text-decoration: line-through;
 }
