--- a/style.css
+++ b/style.css
@@ -1,125 +1,123 @@
 *,
 *::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    font-family: 'Lato', sans-serif;
-    --bg-color-: rgb(177, 177, 177);
+  font-family: "Lato", sans-serif;
+  --bg-color-: rgb(177, 177, 177);
 }
 
 body {
-    background-image: url('/images/todoApp.jpg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+  background-image: url("/images/todoApp.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 a {
-    color: black;
+  color: black;
 }
 #container {
-    background-color: rgba(255, 255, 255, 0.692);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 2.5vh;
-    width: 50vw;
-    margin-top: 10vh;
+  background-color: rgba(255, 255, 255, 0.692);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2.5vh;
+  width: 50vw;
+  margin-top: 10vh;
 }
 
 #heading {
-    font-family: 'Quicksand', sans-serif;
-    margin-bottom: 30px;
-    font-size: 1.3rem;
-    text-transform: uppercase;
+  font-family: "Quicksand", sans-serif;
+  margin-bottom: 30px;
+  font-size: 1.3rem;
+  text-transform: uppercase;
 }
 
-.input_container{
-    display: flex;
+.input_container {
+  display: flex;
 }
 #inputfield {
-    height: 30px;
-    width: calc(40vw - 75px);
-    background:transparent;
-    border: none;
-    border: 1px solid rgba(63, 162, 201, 0.781);
-    color: black;
-    flex-grow: 2;
+  height: 30px;
+  width: calc(40vw - 75px);
+  background: transparent;
+  border: none;
+  border: 1px solid rgba(63, 162, 201, 0.781);
+  color: black;
+  flex-grow: 2;
 }
 #inputfield:focus {
-    outline: none;
+  outline: none;
 }
 
 #addtask {
-    height: 30px;
-    width: 75px;
-    flex-grow: 1;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(63, 162, 201);
-    transition: all 0.5s;
-    cursor: pointer;
+  height: 30px;
+  width: 75px;
+  flex-grow: 1;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(63, 162, 201);
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
 #addtask:hover {
-    background-color: var(--bg-color-);
+  background-color: var(--bg-color-);
 }
 
 .task {
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
-    background-color: white;
-    height: 5vh;
-    width: 40vw;
-    border: 1px solid rgb(63, 162, 201);
-    margin: 2px;
-    padding: 10px 0px 0px 20px;
-    cursor: pointer;
-    transition: all 0.5s;
-    overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+  background-color: white;
+  height: 5vh;
+  width: 40vw;
+  border: 1px solid rgb(63, 162, 201);
+  margin: 2px;
+  padding: 10px 0px 0px 20px;
+  cursor: pointer;
+  transition: all 0.5s;
+  overflow: hidden;
 }
 .task::selection {
-    color: none;
-    background: none;
+  color: none;
+  background: none;
 }
 
-.task:hover{
-    background-color: var(--bg-color-);
+.task:hover {
+  background-color: var(--bg-color-);
 }
 
-.output_container{
-    display: flex;
-    flex-direction: column;
-    margin: 20px 10px 0px 10px;
+.output_container {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 10px 0px 10px;
 }
-
 
 .fa-times {
-    position: absolute;
-    right: 2.5%;
-    top: 30%;
-    cursor: pointer;
+  position: absolute;
+  right: 2.5%;
+  top: 30%;
+  cursor: pointer;
 }
 
-
 .checked {
-    font-style: oblique;
-    text-decoration: line-through;
-    background-color: rgb(177, 177, 177);
+  font-style: oblique;
+  text-decoration: line-through;
+  background-color: rgb(177, 177, 177);
 }
 
 .error-message {
-    color: red;
+  color: red;
 }
 #form {
-    display: flex;
+  display: flex;
 }
