--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-image: url("/images/todoApp.jpg");
+  background-image: url("/TodoApp/images/todoApp.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
